[package]
name = "kmod-test"
version = "0.1.0"
authors = ["SardineFish <sardine@live.cn>"]
edition = "2018"

[lib]
name = "kmod_test"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.0.0"
proc-macros = { path = "proc-macros" }
packet = { path = "./packet", default-features = false, features = ["no_std"] }

[build-dependencies]
bindgen = "0.55.1"
