[package]
name = "client"
version = "0.1.0"
authors = ["SardineFish <sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-sys = { git = "https://github.com/little-dude/netlink" }
netlink-packet-core = { git = "https://github.com/little-dude/netlink" }

[build-dependencies]
cc = "1.0.61"