[package]
name = "packet"
version = "0.1.0"
authors = ["SardineFish <sardine@live.cn>"]
edition = "2018"

[lib]
crate-type = [ "staticlib" ]

[dependencies]
concat-idents = "1.0.0"

[dev-dependencies]
rand = "0.7.3"

[features]
default = []
no_panic_handler = []
no_std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[profile.test]
panic = "abort"
