[package]
name = "test-no-std"
version = "0.1.0"
authors = ["SardineFish <sardine@live.cn>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
packet = { path = "..", default-features = false, features = ["no_std"] }
rand = { version = "0.7.3", default-features = false }

[dev-dependencies]
cc = "1.0.62"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = 'unwind'
