[package]
name = "test-std"
version = "0.1.0"
authors = ["SardineFish <sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "..", default-features = false, features = ["no_panic_handler"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
